Fix duplicate add session buttons on mobile

--- a/app/assets/stylesheets/shared.css.scss
+++ b/app/assets/stylesheets/shared.css.scss
@@ -306,6 +306,20 @@ ul.sessionsList {
   clear: both;
 }
 
+.add-session-mobile {
+  display: none;
+  @media screen and (max-width: 65em) {
+    display: block;
+    padding-bottom: 1em;
+  }
+}
+
+.add-session-desktop {
+  @media screen and (max-width: 65em) {
+    display: none;
+  }
+}
+
 .more_sessions {
   padding-left: 1.8em;
 }
